plugins {
    id 'org.springframework.boot' version '3.4.4' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
    group = 'org.spring.ai'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url "https://repo.spring.io/snapshot"
        }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    ext {
        set('springAiVersion', "1.0.0-SNAPSHOT")
        set('springBootVersion', "3.4.4")
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(23)
        }
    }

    compileJava {
        // required for reflection to read parameter names
        options.compilerArgs += ['-parameters']
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
            mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation "org.springframework.ai:spring-ai-starter-model-openai"

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'io.projectreactor:reactor-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
        jvmArgs '--enable-native-access=ALL-UNNAMED'
    }
}
